Add Sculk Sword ability (Thralls)